--- a/index.html
+++ b/index.html
@@ -153,40 +153,60 @@
         }
 
         function generateSchedule() {
-            const scheduleTable = document.getElementById('scheduleTable').querySelector('tbody');
-            scheduleTable.innerHTML = '';
-            schedule = [];
+    const scheduleTable = document.getElementById('scheduleTable').querySelector('tbody');
+    scheduleTable.innerHTML = '';
+    schedule = [];
 
-            if (teams.length < 2) {
-                alert('Es müssen mindestens zwei Teams vorhanden sein, um einen Spielplan zu erstellen!');
-                return;
-            }
+    if (teams.length < 2) {
+        alert('Es müssen mindestens zwei Teams vorhanden sein, um einen Spielplan zu erstellen!');
+        return;
+    }
 
-            let matchCount = 1;
-            for (let i = 0; i < teams.length; i++) {
-                for (let j = i + 1; j < teams.length; j++) {
-                    const game = {
-                        match: matchCount++,
-                        team1: teams[i].teamName,
-                        team2: teams[j].teamName,
-                        result: ''
-                    };
-                    schedule.push(game);
+    // Entferne den alten Spielplan aus Firebase
+    const scheduleRef = ref(db, 'spielplan');
+    set(scheduleRef, null)
+        .then(() => {
+            console.log('Alter Spielplan erfolgreich aus Firebase entfernt.');
+        })
+        .catch(error => {
+            console.error('Fehler beim Löschen des alten Spielplans:', error);
+        });
 
-                    const row = `<tr>
-                        <td>Spiel ${game.match}</td>
-                        <td>${game.team1}</td>
-                        <td>${game.team2}</td>
-                        <td>
-                            <input type="text" class="result-input" 
-                                   placeholder="Ergebnis" 
-                                   onchange="updateResult(${game.match - 1}, this.value)">
-                        </td>
-                    </tr>`;
-                    scheduleTable.innerHTML += row;
-                }
-            }
+    let matchCount = 1;
+    for (let i = 0; i < teams.length; i++) {
+        for (let j = i + 1; j < teams.length; j++) {
+            const game = {
+                match: matchCount++,
+                team1: teams[i].teamName,
+                team2: teams[j].teamName,
+                result: ''
+            };
+            schedule.push(game);
+
+            const row = `<tr>
+                <td>Spiel ${game.match}</td>
+                <td>${game.team1}</td>
+                <td>${game.team2}</td>
+                <td>
+                    <input type="text" class="result-input" 
+                           placeholder="Ergebnis" 
+                           onchange="updateResult(${game.match - 1}, this.value)">
+                </td>
+            </tr>`;
+            scheduleTable.innerHTML += row;
         }
+    }
+
+    // Speichere den neuen Spielplan in Firebase
+    set(scheduleRef, schedule)
+        .then(() => {
+            console.log('Neuer Spielplan erfolgreich in Firebase gespeichert.');
+        })
+        .catch(error => {
+            console.error('Fehler beim Speichern des neuen Spielplans:', error);
+        });
+}
+
 
         function updateResult(matchIndex, result) {
             schedule[matchIndex].result = result;
