--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 </head>
 <body>
     <h1>Tischtennis-Team-Losung</h1>
-    <p>Füge Spielernamen hinzu, lasse Teams losen und erstelle einen Spielplan!</p>
+    <p>Füge Spielernamen hinzu, lasse Teams losen und speichere Teamnamen in Firebase!</p>
 
     <div>
         <input type="text" id="playerName" placeholder="Spielername">
@@ -61,6 +61,7 @@
         <tbody></tbody>
     </table>
 
+    <button onclick="saveTeamNames()">Teamnamen speichern</button>
     <button onclick="generateSchedule()">Spielplan erstellen</button>
 
     <h3>Spielplan:</h3>
@@ -103,10 +104,8 @@
                 players.push(playerName);
                 document.getElementById('playerList').innerHTML += `<li>${playerName}</li>`;
                 document.getElementById('playerName').value = '';
-            } else if (players.includes(playerName)) {
-                alert('Spieler ist bereits hinzugefügt!');
             } else {
-                alert('Bitte einen gültigen Namen eingeben.');
+                alert(playerName ? 'Spieler ist bereits hinzugefügt!' : 'Bitte einen gültigen Namen eingeben.');
             }
         }
 
@@ -133,18 +132,10 @@
                     <td>${teamName}</td>
                     <td>${player1}</td>
                     <td>${player2}</td>
-                    <td>
-                        <input type="text" class="rename-input" 
-                               value="${teamName}" 
-                               onchange="updateTeamName(${teamCount - 1}, this.value)">
-                    </td>
+                    <td><input type="text" class="rename-input" value="${teamName}" onchange="updateTeamName(${teamCount - 1}, this.value)"></td>
                 </tr>`;
                 teamTable.innerHTML += row;
                 teamCount++;
-            }
-
-            if (shuffledPlayers.length === 1) {
-                alert(`Der Spieler ${shuffledPlayers[0]} hat leider kein Team gefunden.`);
             }
         }
 
@@ -152,78 +143,43 @@
             teams[teamIndex].teamName = newName;
         }
 
-    function generateSchedule() {
-    const scheduleTable = document.getElementById('scheduleTable').querySelector('tbody');
-    scheduleTable.innerHTML = '';
-    schedule = [];
-
-    if (teams.length < 2) {
-        alert('Es müssen mindestens zwei Teams vorhanden sein, um einen Spielplan zu erstellen!');
-        return;
-    }
-
-    // Entferne den alten Spielplan aus Firebase
-    const scheduleRef = ref(db, 'spielplan');
-    set(scheduleRef, null)
-        .then(() => {
-            console.log('Alter Spielplan erfolgreich aus Firebase entfernt.');
-        })
-        .catch(error => {
-            console.error('Fehler beim Löschen des alten Spielplans:', error);
-        });
-
-    let matchCount = 1;
-    for (let i = 0; i < teams.length; i++) {
-        for (let j = i + 1; j < teams.length; j++) {
-            const game = {
-                match: matchCount++,
-                team1: teams[i].teamName,
-                team2: teams[j].teamName,
-                result: '' // Ergebnis ist leer
-            };
-            schedule.push(game);
-
-            const row = `<tr>
-                <td>Spiel ${game.match}</td>
-                <td>${game.team1}</td>
-                <td>${game.team2}</td>
-                <td>
-                    <input type="text" class="result-input" 
-                           placeholder="Ergebnis" 
-                           onchange="updateResult(${game.match - 1}, this.value)">
-                </td>
-            </tr>`;
-            scheduleTable.innerHTML += row;
+        function saveTeamNames() {
+            set(ref(db, 'teams'), teams)
+                .then(() => alert('Teamnamen erfolgreich gespeichert.'))
+                .catch(error => console.error('Fehler beim Speichern der Teamnamen:', error));
         }
-    }
 
-    // Speichere den neuen Spielplan in Firebase
-    set(scheduleRef, schedule)
-        .then(() => {
-            console.log('Neuer Spielplan erfolgreich in Firebase gespeichert.');
-            alert('Neuer Spielplan wurde erstellt und in Firebase gespeichert.');
-        })
-        .catch(error => {
-            console.error('Fehler beim Speichern des neuen Spielplans:', error);
-        });
-}
+        function generateSchedule() {
+            const scheduleTable = document.getElementById('scheduleTable').querySelector('tbody');
+            scheduleTable.innerHTML = '';
+            schedule = [];
 
+            if (teams.length < 2) {
+                alert('Es müssen mindestens zwei Teams vorhanden sein!');
+                return;
+            }
 
+            set(ref(db, 'spielplan'), null);
+
+            let matchCount = 1;
+            for (let i = 0; i < teams.length; i++) {
+                for (let j = i + 1; j < teams.length; j++) {
+                    const game = {
+                        match: matchCount++,
+                        team1: teams[i].teamName,
+                        team2: teams[j].teamName,
+                        result: ''
+                    };
+                    schedule.push(game);
+                    scheduleTable.innerHTML += `<tr><td>Spiel ${game.match}</td><td>${game.team1}</td><td>${game.team2}</td><td><input type="text" class="result-input" placeholder="Ergebnis" onchange="updateResult(${game.match - 1}, this.value)"></td></tr>`;
+                }
+            }
+            set(ref(db, 'spielplan'), schedule);
+        }
 
         function updateResult(matchIndex, result) {
             schedule[matchIndex].result = result;
-            saveResultsToFirebase();
-        }
-
-        function saveResultsToFirebase() {
-            console.log('Speichere folgenden Spielplan in Firebase:', schedule);
-            set(ref(db, 'spielplan'), schedule)
-                .then(() => {
-                    console.log('Ergebnisse erfolgreich gespeichert!');
-                })
-                .catch(error => {
-                    console.error('Fehler beim Speichern:', error);
-                });
+            set(ref(db, 'spielplan'), schedule);
         }
 
         function shuffle(array) {
@@ -233,12 +189,11 @@
             }
         }
 
-        // Funktionen global verfügbar machen
         window.addPlayer = addPlayer;
         window.drawTeams = drawTeams;
+        window.saveTeamNames = saveTeamNames;
         window.generateSchedule = generateSchedule;
         window.updateResult = updateResult;
-        window.saveResultsToFirebase = saveResultsToFirebase;
     </script>
 </body>
 </html>
