--- a/index.html
+++ b/index.html
@@ -140,14 +140,21 @@
         }
 
         function updateTeamName(teamIndex, newName) {
-            teams[teamIndex].teamName = newName;
-        }
+    teams[teamIndex].teamName = newName;
+}
 
         function saveTeamNames() {
-            set(ref(db, 'teams'), teams)
-                .then(() => alert('Teamnamen erfolgreich gespeichert.'))
-                .catch(error => console.error('Fehler beim Speichern der Teamnamen:', error));
-        }
+    const teamTable = document.getElementById('teamTable').querySelector('tbody').rows;
+
+    for (let i = 0; i < teamTable.length; i++) {
+        const newName = teamTable[i].querySelector('.rename-input').value.trim();
+        teams[i].teamName = newName;
+    }
+
+    set(ref(db, 'teams'), teams)
+        .then(() => alert('Teamnamen erfolgreich gespeichert.'))
+        .catch(error => console.error('Fehler beim Speichern der Teamnamen:', error));
+}
 
         function generateSchedule() {
             const scheduleTable = document.getElementById('scheduleTable').querySelector('tbody');
