--- a/index.html
+++ b/index.html
@@ -99,10 +99,18 @@
         let schedule = [];
 
         function addPlayer() {
-            const playerName = document.getElementById('playerName').value.trim();
-            if (playerName && !players.includes(playerName)) {
-                players.push(playerName);
-                document.getElementById('playerList').innerHTML += `<li>${playerName}</li>`;
+    const playerName = document.getElementById('playerName').value.trim();
+    if (playerName && !players.includes(playerName)) {
+        players.push(playerName);
+        const playerList = document.getElementById('playerList');
+        const newListItem = document.createElement('li');
+        newListItem.textContent = playerName;
+        playerList.appendChild(newListItem);
+        document.getElementById('playerName').value = '';
+    } else {
+        alert(playerName ? 'Spieler ist bereits hinzugefügt!' : 'Bitte einen gültigen Namen eingeben.');
+    }
+}</li>`;
                 document.getElementById('playerName').value = '';
             } else {
                 alert(playerName ? 'Spieler ist bereits hinzugefügt!' : 'Bitte einen gültigen Namen eingeben.');
