--- a/index.html
+++ b/index.html
@@ -152,12 +152,10 @@
 }
 
         function saveTeamNames() {
-    const teamTable = document.getElementById('teamTable').querySelector('tbody').rows;
-
-    for (let i = 0; i < teamTable.length; i++) {
-        const newName = teamTable[i].querySelector('.rename-input').value.trim();
-        teams[i].teamName = newName;
-    }
+    set(ref(db, 'teams'), teams)
+        .then(() => alert('Teamnamen erfolgreich gespeichert.'))
+        .catch(error => console.error('Fehler beim Speichern der Teamnamen:', error));
+}
 
     set(ref(db, 'teams'), teams)
         .then(() => alert('Teamnamen erfolgreich gespeichert.'))
