--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Team-Losung Tischtennis v1.0</title>
+    <title>Team-Losung Tischtennis</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -99,30 +99,10 @@
         let schedule = [];
 
         function addPlayer() {
-    const playerName = document.getElementById('playerName').value.trim();
-    if (playerName && !players.includes(playerName)) {
-        players.push(playerName);
-        const playerList = document.getElementById('playerList');
-        const newListItem = document.createElement('li');
-        newListItem.textContent = playerName;
-        playerList.appendChild(newListItem);
-        document.getElementById('playerName').value = '';
-    } else {
-        alert(playerName ? 'Spieler ist bereits hinzugefügt!' : 'Bitte einen gültigen Namen eingeben.');
-    }
-} else {
-        alert(playerName ? 'Spieler ist bereits hinzugefügt!' : 'Bitte einen gültigen Namen eingeben.');
-    }
-} else {
-        alert(playerName ? 'Spieler ist bereits hinzugefügt!' : 'Bitte einen gültigen Namen eingeben.');
-    }
-} else {
-        alert(playerName ? 'Spieler ist bereits hinzugefügt!' : 'Bitte einen gültigen Namen eingeben.');
-    }
-} else {
-        alert(playerName ? 'Spieler ist bereits hinzugefügt!' : 'Bitte einen gültigen Namen eingeben.');
-    }
-}</li>`;
+            const playerName = document.getElementById('playerName').value.trim();
+            if (playerName && !players.includes(playerName)) {
+                players.push(playerName);
+                document.getElementById('playerList').innerHTML += `<li>${playerName}</li>`;
                 document.getElementById('playerName').value = '';
             } else {
                 alert(playerName ? 'Spieler ist bereits hinzugefügt!' : 'Bitte einen gültigen Namen eingeben.');
