--- a/viewer.html
+++ b/viewer.html
@@ -47,8 +47,8 @@
             <tr>
                 <th>Platz</th>
                 <th>Team</th>
-                <th>Punkte (X:Y)</th>
-                <th>Spiele (Erzielt:Bekommen)</th>
+                <th>Punkte</th>
+                <th>Spiele</th>
                 <th>+/-</th>
             </tr>
         </thead>
