--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Team-Losung Tischtennis v1.1</title>
+    <title>Team-Losung Tischtennis v1.2</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -41,6 +41,7 @@
     <div>
         <input type="text" id="playerName" placeholder="Spielername">
         <button onclick="addPlayer()">Hinzufügen</button>
+        <button onclick="loadDataFromFirebase()">Daten aus Firebase laden</button>
     </div>
 
     <h3>Spielerliste:</h3>
@@ -79,7 +80,7 @@
 
     <script type="module">
         import { initializeApp } from "https://www.gstatic.com/firebasejs/11.0.2/firebase-app.js";
-        import { getDatabase, ref, set } from "https://www.gstatic.com/firebasejs/11.0.2/firebase-database.js";
+        import { getDatabase, ref, set, onValue } from "https://www.gstatic.com/firebasejs/11.0.2/firebase-database.js";
 
         const firebaseConfig = {
             apiKey: "AIzaSyAksVQRYriHb9gS7TjgeN3faX10IoKJBIw",
@@ -145,84 +146,71 @@
 
         function saveTeamNames() {
             const teamTable = document.getElementById('teamTable').querySelector('tbody').rows;
-
             for (let i = 0; i < teamTable.length; i++) {
                 const newName = teamTable[i].querySelector('.rename-input').value.trim();
                 teams[i].teamName = newName;
             }
-
             set(ref(db, 'teams'), teams)
                 .then(() => alert('Teamnamen erfolgreich gespeichert.'))
                 .catch(error => console.error('Fehler beim Speichern der Teamnamen:', error));
         }
 
-        function generateSchedule() {
-    const scheduleTable = document.getElementById('scheduleTable').querySelector('tbody');
-    scheduleTable.innerHTML = '';
-    schedule = [];
+        function loadDataFromFirebase() {
+            const teamRef = ref(db, 'teams');
+            const scheduleRef = ref(db, 'spielplan');
 
-    if (teams.length < 2) {
-        alert('Es müssen mindestens zwei Teams vorhanden sein!');
-        return;
-    }
+            onValue(teamRef, (snapshot) => {
+                const teamsData = snapshot.val();
+                if (teamsData) {
+                    teams = teamsData;
+                    renderTeams();
+                    alert("Teams erfolgreich aus Firebase geladen!");
+                } else {
+                    alert("Keine Teams in Firebase gefunden.");
+                }
+            });
 
-    set(ref(db, 'spielplan'), null);
-
-    const availableMatches = [];
-    for (let i = 0; i < teams.length; i++) {
-        for (let j = i + 1; j < teams.length; j++) {
-            availableMatches.push({ team1: teams[i].teamName, team2: teams[j].teamName });
-        }
-    }
-
-    let lastPlayed = new Map(teams.map(team => [team.teamName, -1]));
-    let matchCount = 1;
-
-    while (availableMatches.length > 0) {
-        availableMatches.sort((a, b) => {
-            const aLast = Math.max(lastPlayed.get(a.team1), lastPlayed.get(a.team2));
-            const bLast = Math.max(lastPlayed.get(b.team1), lastPlayed.get(b.team2));
-            return aLast - bLast;
-        });
-
-        const nextMatch = availableMatches.shift();
-        lastPlayed.set(nextMatch.team1, matchCount);
-        lastPlayed.set(nextMatch.team2, matchCount);
-
-        schedule.push({
-            match: matchCount++,
-            ...nextMatch,
-            result: ''
-        });
-
-        scheduleTable.innerHTML += `<tr>
-            <td>Spiel ${matchCount - 1}</td>
-            <td>${nextMatch.team1}</td>
-            <td>${nextMatch.team2}</td>
-            <td><input type="text" class="result-input" placeholder="Ergebnis" onchange="updateResult(${matchCount - 2}, this.value)"></td>
-        </tr>`;
-    }
-
-    set(ref(db, 'spielplan'), schedule);
+            onValue(scheduleRef, (snapshot) => {
+                const scheduleData = snapshot.val();
+                if (scheduleData) {
+                    schedule = scheduleData;
+                    renderSchedule();
+                    alert("Spielplan erfolgreich aus Firebase geladen!");
+                } else {
+                    alert("Kein Spielplan in Firebase gefunden.");
+                }
+            });
         }
 
-        function updateResult(matchIndex, result) {
-            schedule[matchIndex].result = result;
-            set(ref(db, 'spielplan'), schedule);
+        function renderTeams() {
+            const teamTable = document.getElementById('teamTable').querySelector('tbody');
+            teamTable.innerHTML = '';
+            teams.forEach((team, index) => {
+                const row = `<tr>
+                    <td>Team ${index + 1}</td>
+                    <td>${team.player1}</td>
+                    <td>${team.player2}</td>
+                    <td><input type="text" class="rename-input" value="${team.teamName}" onchange="updateTeamName(${index}, this.value)"></td>
+                </tr>`;
+                teamTable.innerHTML += row;
+            });
+        }
+
+        function renderSchedule() {
+            const scheduleTable = document.getElementById('scheduleTable').querySelector('tbody');
+            scheduleTable.innerHTML = '';
+            schedule.forEach((game, index) => {
+                const row = `<tr>
+                    <td>Spiel ${index + 1}</td>
+                    <td>${game.team1}</td>
+                    <td>${game.team2}</td>
+                    <td><input type="text" class="result-input" placeholder="Ergebnis" value="${game.result || ''}" onchange="updateResult(${index}, this.value)"></td>
+                </tr>`;
+                scheduleTable.innerHTML += row;
+            });
         }
 
         function shuffle(array) {
             for (let i = array.length - 1; i > 0; i--) {
                 const j = Math.floor(Math.random() * (i + 1));
-                [array[i], array[j]] = [array[j], array[i]];
-            }
-        }
-
-        window.addPlayer = addPlayer;
-        window.drawTeams = drawTeams;
-        window.saveTeamNames = saveTeamNames;
-        window.generateSchedule = generateSchedule;
-        window.updateResult = updateResult;
-    </script>
-</body>
-</html>
+                [array[i], array[j]] = [array
