--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Team-Losung Tischtennis v1.2</title>
+    <title>Team-Losung Tischtennis v1.1</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -80,7 +80,7 @@
 
     <script type="module">
         import { initializeApp } from "https://www.gstatic.com/firebasejs/11.0.2/firebase-app.js";
-        import { getDatabase, ref, set, onValue } from "https://www.gstatic.com/firebasejs/11.0.2/firebase-database.js";
+        import { getDatabase, ref, set, get, child } from "https://www.gstatic.com/firebasejs/11.0.2/firebase-database.js";
 
         const firebaseConfig = {
             apiKey: "AIzaSyAksVQRYriHb9gS7TjgeN3faX10IoKJBIw",
@@ -95,7 +95,7 @@
         const app = initializeApp(firebaseConfig);
         const db = getDatabase(app);
 
-        const players = [];
+        let players = [];
         let teams = [];
         let schedule = [];
 
@@ -110,75 +110,18 @@
             }
         }
 
-        function drawTeams() {
-            const teamTable = document.getElementById('teamTable').querySelector('tbody');
-            teamTable.innerHTML = '';
-            teams = [];
-
-            if (players.length < 2) {
-                alert('Es müssen mindestens zwei Spieler hinzugefügt werden!');
-                return;
-            }
-
-            const shuffledPlayers = [...players];
-            shuffle(shuffledPlayers);
-
-            let teamCount = 1;
-            while (shuffledPlayers.length >= 2) {
-                const player1 = shuffledPlayers.pop();
-                const player2 = shuffledPlayers.pop();
-                const teamName = `Team ${teamCount}`;
-                teams.push({ player1, player2, teamName });
-                const row = `<tr>
-                    <td>${teamName}</td>
-                    <td>${player1}</td>
-                    <td>${player2}</td>
-                    <td><input type="text" class="rename-input" value="${teamName}" onchange="updateTeamName(${teamCount - 1}, this.value)"></td>
-                </tr>`;
-                teamTable.innerHTML += row;
-                teamCount++;
-            }
-        }
-
-        function updateTeamName(teamIndex, newName) {
-            teams[teamIndex].teamName = newName;
-        }
-
-        function saveTeamNames() {
-            const teamTable = document.getElementById('teamTable').querySelector('tbody').rows;
-            for (let i = 0; i < teamTable.length; i++) {
-                const newName = teamTable[i].querySelector('.rename-input').value.trim();
-                teams[i].teamName = newName;
-            }
-            set(ref(db, 'teams'), teams)
-                .then(() => alert('Teamnamen erfolgreich gespeichert.'))
-                .catch(error => console.error('Fehler beim Speichern der Teamnamen:', error));
-        }
-
         function loadDataFromFirebase() {
-            const teamRef = ref(db, 'teams');
-            const scheduleRef = ref(db, 'spielplan');
-
-            onValue(teamRef, (snapshot) => {
-                const teamsData = snapshot.val();
-                if (teamsData) {
-                    teams = teamsData;
+            const dbRef = ref(db);
+            get(child(dbRef, 'teams')).then((snapshot) => {
+                if (snapshot.exists()) {
+                    teams = snapshot.val();
                     renderTeams();
-                    alert("Teams erfolgreich aus Firebase geladen!");
+                    alert('Teams erfolgreich aus Firebase geladen.');
                 } else {
-                    alert("Keine Teams in Firebase gefunden.");
+                    alert('Keine Teams in Firebase gefunden.');
                 }
-            });
-
-            onValue(scheduleRef, (snapshot) => {
-                const scheduleData = snapshot.val();
-                if (scheduleData) {
-                    schedule = scheduleData;
-                    renderSchedule();
-                    alert("Spielplan erfolgreich aus Firebase geladen!");
-                } else {
-                    alert("Kein Spielplan in Firebase gefunden.");
-                }
+            }).catch((error) => {
+                console.error('Fehler beim Laden der Daten:', error);
             });
         }
 
@@ -196,21 +139,12 @@
             });
         }
 
-        function renderSchedule() {
-            const scheduleTable = document.getElementById('scheduleTable').querySelector('tbody');
-            scheduleTable.innerHTML = '';
-            schedule.forEach((game, index) => {
-                const row = `<tr>
-                    <td>Spiel ${index + 1}</td>
-                    <td>${game.team1}</td>
-                    <td>${game.team2}</td>
-                    <td><input type="text" class="result-input" placeholder="Ergebnis" value="${game.result || ''}" onchange="updateResult(${index}, this.value)"></td>
-                </tr>`;
-                scheduleTable.innerHTML += row;
-            });
+        function updateTeamName(teamIndex, newName) {
+            teams[teamIndex].teamName = newName;
         }
 
-        function shuffle(array) {
-            for (let i = array.length - 1; i > 0; i--) {
-                const j = Math.floor(Math.random() * (i + 1));
-                [array[i], array[j]] = [array
+        window.addPlayer = addPlayer;
+        window.loadDataFromFirebase = loadDataFromFirebase;
+    </script>
+</body>
+</html>
